force-app/main/default/objects/CM_Country__c/fields/CM_Alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>CM_Alpha2Code__c</fullName>
    <label>Alpha2Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>