force-app/main/default/objects/CM_Country__c/fields/CM_Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>CM_Alpha3Code__c</fullName>
    <label>Alpha3Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>