force-app/main/default/objects/CM_Country__c/fields/CM_CapitalCity__c.field-meta.xml
<CustomField>
    <fullName>CM_CapitalCity__c</fullName>
    <label>Capital City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>