force-app/main/default/objects/CM_Country__c/fields/CM_Region__c.field-meta.xml
<CustomField>
    <fullName>CM_Region__c</fullName>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>