force-app/main/default/objects/CM_Country__c/fields/CM_RegionalBlocs__c.field-meta.xml
<CustomField>
    <fullName>CM_RegionalBlocs__c</fullName>
    <label>RegionalBlocs</label>
    <length>50</length>
    <type>Text</type>
</CustomField>